Fleshing out /chatty.

--- a/eclipse/server.properties
+++ b/eclipse/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Fri Apr 22 02:36:34 EDT 2016
+#Fri Apr 22 22:32:33 EDT 2016
 generator-settings=
 op-permission-level=4
 allow-nether=true
@@ -17,17 +17,18 @@ max-build-height=256
 spawn-npcs=true
 white-list=false
 spawn-animals=true
-hardcore=false
 snooper-enabled=false
+hardcore=false
 online-mode=false
 resource-pack=
 pvp=true
 difficulty=1
 enable-command-block=false
-gamemode=1
 player-idle-timeout=0
+gamemode=1
 max-players=2
 spawn-monsters=true
-generate-structures=true
 view-distance=10
+generate-structures=true
+spawn-protection=16
 motd=A Modding Server
