Updated build.gradle to integrate the build number from Jenkins, or default to "IDE" when it isn't built through Jenkins.

--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,10 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "0.1"
+def jenkinsBuild = System.getenv("BUILD_NUMBER") as String ?: "IDE"
+
+version = "0.1-" + jenkinsBuild
+//version = "0.1"
 group= "com.keller23.mc.chatty" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "chatty"
 
